# advent-of-code

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod
.github/workflows/: workflow.yml
2020/: test.sh
2020/advent-of-code/src/: main.rs
2020/day02/: Cargo.toml
2020/day02/src/: main.rs
2020/day03/src/: main.rs
2020/day04/: Cargo.toml
2020/day04/src/: main.rs
2020/day05/src/: main.rs
2020/day06/src/: main.rs
2021/: README.md  go.mod
2021/01/: main.go
2021/02/: main.go
2021/03/: main.go
2021/04/: go.mod  main.go
2021/05/: main.go
2021/06/: main.go
2021/08/: main.go
2021/09/: main.go
2021/internal/day01/: main.go
2021/internal/day02/: main.go  main_test.go
2021/internal/day03/: main_test.go
2021/internal/day05/: main.go  main_test.go
2021/internal/day06/: main.go  main_test.go
2021/internal/day07/: main.go
2021/internal/day08/: main.go
2021/internal/day09/: main_test.go
2021/util/: util.go
2022/: README.md  pyproject.toml
2022/advent_of_code/: cli.py
2022/advent_of_code/day01/: __init__.py
2022/advent_of_code/day02/: __init__.py
2022/advent_of_code/day03/: __init__.py
2022/advent_of_code/day04/: __init__.py
2022/advent_of_code/day05/: __init__.py
2022/advent_of_code/day06/: __init__.py
2022/advent_of_code/day07/: __init__.py
2022/advent_of_code/day08/: __init__.py
2022/advent_of_code/day09/: __init__.py
2022/advent_of_code/day10/: __init__.py
2022/advent_of_code/day11/: __init__.py
2022/advent_of_code/day12/: __init__.py
2022/advent_of_code/day13/: __init__.py
2022/advent_of_code/utils/: __init__.py
2022/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py
2023/day01/: BUILD.bazel  main.go  main_test.go
2023/day02/: BUILD.bazel  main.go  main_test.go
internal/day01/: main_test.go
internal/day03/: main.go
internal/day04/: main.go  main_test.go
internal/day07/: main.go  main_test.go
internal/day08/: main.go  main_test.go
internal/day09/: main.go
internal/day10/: main.go  main_test.go
internal/day11/: main.go
util/: math.go
