[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-code"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Nicolas Picard", email = "olacin@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/advent-of-code#readme"
Issues = "https://github.com/unknown/advent-of-code/issues"
Source = "https://github.com/unknown/advent-of-code"

[project.scripts]
aoc = "advent_of_code.cli:app"

[tool.hatch.version]
path = "advent_of_code/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "httpx",
  "typer",
  "python-dotenv",
  "pytest",
  "pytest-cov",
  "isort",
  "black",
  "flake8",
  "bandit[toml]",
  "pytest-watch",
  "pytest-testmon"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=advent_of_code --cov=tests {args}"
codecov = "cov --cov-report=xml {args}"
no-cov = "cov --no-cov {args}"
test = "pytest -o log_cli=true -o log_cli_level=DEBUG"
check = [
  "flake8 --ignore E501 {args:.}",
  "black --check {args:.}",
  "isort --check-only {args:.}",
  "bandit -r -c pyproject.toml {args:.}"
]
fmt = [
  "black {args:.}",
  "isort {args:.}",
  "check",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "advent_of_code/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.bandit]
recursive = true
exclude_dirs = ["tests"]

[tool.isort]
profile = "black"
