load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "day01_lib",
    srcs = ["main.go"],
    embedsrcs = ["input.txt"],
    importpath = "github.com/olacin/advent-of-code/2023/day01",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day01",
    embed = [":day01_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "day01_test",
    srcs = ["main_test.go"],
    embed = [":day01_lib"],
    embedsrcs = [
        "input_test.txt",
        "input_test_2.txt",
    ],
)
