load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "day02_lib",
    srcs = ["main.go"],
    embedsrcs = ["input.txt"],
    importpath = "github.com/olacin/advent-of-code/2023/day02",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "day02",
    embed = [":day02_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "day02_test",
    srcs = ["main_test.go"],
    embed = [":day02_lib"],
    embedsrcs = ["input_test.txt"],
)
